refactor: break code into ES modules and fix browser imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es6",              // Компілювати в сучасний стандарт JS
-    "module": "commonjs",
-    "outDir": "./dist",           // Куди складати скомпільований JS (у вас вже є папка dist)
-    "rootDir": "./src",           // Звідки брати вихідний TS (у вас є src/index.ts)
+    "target": "es6",              
+    "module": "es2015",
+    "outDir": "./dist",           
+    "rootDir": "./src",           
     "strict": true,
     "esModuleInterop": true
   },
   "include": [
-    "src" // Включити всі файли в папці src
+    "src" 
   ]
 }
